declarative/processor/src/test/resources/good/resource extends Resource.java
package x;

import com.inrupt.rdf.wrapping.declarative.annotation.Resource;

@Resource
interface X extends org.apache.jena.rdf.model.Resource {
}
