declarative/processor/src/test/resources/bad/resource extends unacceptable.java
package x;

import com.inrupt.rdf.wrapping.declarative.annotation.Resource;

@Resource
interface X extends Comparable {
}
